--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                             class="footer-link">veraedwinem@gmail.com</a>
                     </div>
                 </div>
-                <div><a class="image" href="https://codepen.io/z-" target="_blank"
+                <div><a class="image" href="" target="_blank"
                         style="background-image: url(./assets/EDDEV.png)"></a>
                     <p>©2023 EdDev</p>
                 </div>
