--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
 
 
         <div class="mobile-nav">
-            <div class="logo">
-                <img src="./assets/logo2.png" alt="logo">
-            </div>
-
+        
             <div class='navicon-container' id="toggle">
                 <div class='bar'></div>
                 <div class='bar'></div>
@@ -649,7 +646,7 @@
                             class="footer-link">veraedwinem@gmail.com</a>
                     </div>
                 </div>
-                <div><a class="image" href="" target="_blank"
+                <div><a class="image" href=""
                         style="background-image: url(./assets/EDDEV.png)"></a>
                     <p>©2023 EdDev</p>
                 </div>
