Added the favicon, clean the header bugs, link favicon to html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link type="text/css" rel="stylesheet" href="./css/hover.css">
     <link type="text/css" rel="stylesheet" href="./css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon_io/site.webmanifest">
     <script src="https://unpkg.com/kinet@2.2.1/dist/kinet.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -31,28 +35,27 @@
                 <li class="links"><a href="#servicios">Servicios</a></li>
                 <li class="links"><a href="#portafolio">Portafolio</a></li>
                 <li class="links"><a href="#contacto">Contacto</a></li>
-            </u
-        </div>
+            </u </div>
 
 
 
-        <div class="mobile-nav">
-        
-            <div class='navicon-container' id="toggle">
-                <div class='bar'></div>
-                <div class='bar'></div>
-                <div class='bar'></div>
+            <div class="mobile-nav">
+
+                <div class='navicon-container' id="toggle">
+                    <div class='bar'></div>
+                    <div class='bar'></div>
+                    <div class='bar'></div>
+                </div>
+
+                <ul class="mobile-menu">
+                    <div class="menu-container">
+                        <li class="" id="mobile-links"><a href="#">Inicio</a></li>
+                        <li class="" id="mobile-links"><a href="#acercade">Acerca de</a></li>
+                        <li class="" id="mobile-links"><a href="#servicios">Servicios</a></li>
+                        <li class="" id="mobile-links"><a href="#portafolio">Portafolio</a></li>
+                        <li class="" id="mobile-links"><a href="#contacto">Contacto</a></li>
+                </ul>
             </div>
-
-            <ul class="mobile-menu">
-                <div class="menu-container">
-                    <li class="" id="mobile-links"><a href="#">Inicio</a></li>
-                    <li class="" id="mobile-links"><a href="#acercade">Acerca de</a></li>
-                    <li class="" id="mobile-links"><a href="#servicios">Servicios</a></li>
-                    <li class="" id="mobile-links"><a href="#portafolio">Portafolio</a></li>
-                    <li class="" id="mobile-links"><a href="#contacto">Contacto</a></li>
-            </ul>
-        </div>
         </div>
 
         <div class="hero">
@@ -125,55 +128,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section id="portafolio">
-
-        <div class="portafolios-titulo">
-            <h2 id="portafolio-titulo">Portafolio</h2>
-        </div>
-
-        <div class="portfolio">
-            <div class="tile main-photo">
-                <h2>➔</h2>
-                <div>
-                    <strong>Da click al proyecto para ir al sitio.<br></strong>
-
-                    Este es un conjunto de algunos proyectos desarrollados por mi utilizando Wordpress, HTML, CSS y
-                    JavaScript; Con distintos giros y propósitos
-                    desde landing pages, hasta multipages.
-                </div>
-            </div>
-
-            <div class="photos">
-
-                <div class="tile photo-2">
-                    <a href="https://danny-yo.com.mx"></a>
-                </div>
-
-                <div class="tile photo-3">
-                    <a href="https://drjaimeponcedeleon.com.mx"></a>
-                </div>
-
-                <div class="tile photo-4">
-                    <a href="https://drjuantinajero.com"></a>
-                </div>
-
-                <div class="tile photo-5">
-                    <a href="https://drcarloseduardoalciviasmith.com"></a>
-                </div>
-
-                <div class="tile photo-6">
-                    <a href="https://dramarceotorrino.com"></a>
-                </div>
-
-                <div class="tile photo-7">
-                    <a href="https://medicafertil.us"></a>
-                </div>
-
-            </div>
-        </div>
-
-    </section> -->
 
     <section id="portafolio">
 
@@ -646,8 +600,7 @@
                             class="footer-link">veraedwinem@gmail.com</a>
                     </div>
                 </div>
-                <div><a class="image" href=""
-                        style="background-image: url(./assets/EDDEV.png)"></a>
+                <div><a class="image" href="" style="background-image: url(./assets/EDDEV.png)"></a>
                     <p>©2023 EdDev</p>
                 </div>
             </div>
