--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="manifest" href="./assets/favicon_io/site.webmanifest">
     <script src="https://unpkg.com/kinet@2.2.1/dist/kinet.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript">
         (function() {
@@ -191,14 +192,14 @@
 
             <form action="" class="contact-form">
                 <label for="Nombre">Nombre</label>
-                <input type="text" name="Nombre" id="contact_name" placeholder="Tu nombre aquí">
+                <input type="text" name="Nombre" id="contact_name" placeholder="Tu nombre aquí" required>
                 <label for="Telefono">Teléfono</label>
-                <input type="text" name="Telefono" id="contact_phone" placeholder="Tu teléfono acá">
+                <input type="text" name="Telefono" id="contact_phone" placeholder="Tu teléfono acá" required>
                 <label for="Email">Email</label>
-                <input type="text" name="Email" id="contact_email" placeholder="Tu correo de este lado">
+                <input type="text" name="Email" id="contact_email" placeholder="Tu correo de este lado" required>
                 <label for="Message">Mensaje</label>
-                <input type="text" name="Message" id="contact_msg" placeholder="Platicame en que puedo ayudarte">
-                <button type="submit" class="hvr-bounce-to-right" onclick="sendMail()">Enviar</button>
+                <input type="text" name="Message" id="contact_msg" placeholder="Platicame en que puedo ayudarte" required>
+                <button type="button" onclick="sendMail()" class="hvr-bounce-to-right form-button">Enviar</button>
             </form>
         </div>
     </section>
