--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <input type="text" name="Email" id="contact_email" placeholder="Tu correo de este lado" required>
                 <label for="Message">Mensaje</label>
                 <input type="text" name="Message" id="contact_msg" placeholder="Platicame en que puedo ayudarte" required>
-                <button type="button" onclick="sendMail()" class="hvr-bounce-to-right form-button">Enviar</button>
+                <button type="button" onclick="sendMail()" class="form-button hvr-bounce-to-right">Enviar</button>
             </form>
         </div>
     </section>
