Change in project-3 link name

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="carousel-item">
                     <img src="./assets/img/photo3.png" alt="project-3">
                     <a href="https://drjaimeponcedeleon.com.mx" target="_blank" class="carousel-link hvr-float">Dr.
-                        Single Page</a>
+                        Multi Page</a>
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/img/photo4.png" alt="project-4">
