I added a new project to my portfolio

--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@
                     <a href="https://dramarceotorrino.com" target="_blank" class="carousel-link hvr-float">Dr. Single
                         Page</a>
                 </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/photo7.png" alt="project-6">
+                    <a href="https://medicafertil.us" target="_blank" class="carousel-link hvr-float">Dr. Single
+                        Page</a>
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/photo8.png" alt="project-7">
+                    <a href="https://crmexico.org" target="_blank" class="carousel-link hvr-float">Celebremos México Multipage</a>
+                </div>
                 <!-- Add more carousel items as needed -->
             </figure>
             <nav>
