Cambios en el CSS

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                 <label for="Email">Email</label>
                 <input type="text" name="Email" id="contact_email" placeholder="Tu correo de este lado" required>
                 <label for="Message">Mensaje</label>
-                <input type="text" name="Message" id="contact_msg" placeholder="Platicame en que puedo ayudarte"
-                    required>
+                <textarea type="text" name="Message" id="contact_msg" placeholder="¿En que puedo&#10;ayudarte?"
+                    required></textarea>
                 <button type="button" onclick="sendMail()" class="form-button hvr-bounce-to-right">Enviar</button>
             </form>
         </div>
